--- a/templates/blog/create_post.html
+++ b/templates/blog/create_post.html
@@ -1,1 +1,27 @@
-Create Post
+{% extends "base.html" %}
+{% block content %}
+<div class="row">
+  <div class="col-md-4 offset-sm-4">
+    <div class="card">
+    <h3 class="text-center my-3">Create Post</h3>
+      <div class="card-body">
+        <form method="post">
+          {% csrf_token %}
+          <div class="mb-3">
+            <label for="titleFormControlInput1" class="form-label">Title</label>
+            <input type="text" class="form-control" id="titleFormControlInput1" placeholder="Enter title" name="title" required>
+          </div>
+          
+          <div class="mb-3">
+            <label for="contentFormControlTextarea1" class="form-label">Content</label>
+            <textarea class="form-control" id="contentFormControlTextarea1" rows="10" placeholder="Enter content" name=content required></textarea>
+          </div>
+          <div class="mb-3">
+            <input type="submit" class="btn btn-primary w-100">
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock content %}
