--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,18 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="card w-75 mb-3">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Button</a>
+<h3 class="text-center mb-5">Blog Posts</h3>
+<div class="row">
+  <div class="col-md-2">
+    <div class="card">
+      <div class="card-header">
+        Recent Posts
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
     </div>
   </div>
-
-  <div class="card w-50">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Button</a>
+  <div class="col-md-10">
+    {% for post in posts %}
+    <div class="card mb-3">
+      <div class="card-body">
+        <h5 class="card-title">{{post.title}}</h5>
+        <p class="card-text">{{post.content|truncatechars:100}}</p>
+        <a href="#" class="btn btn-primary btn-sm">More details</a>
+        <a href="#" class="btn btn-primary btn-sm float-end">By: {{post.user.username|title}}</a>
+      </div>
     </div>
-  </div>
+  {% endfor %}
+</div>
+</div>
 {% endblock content %}
