--- a/templates/template_blocks/navbar.html
+++ b/templates/template_blocks/navbar.html
@@ -1,28 +1,31 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg" style="background-color:var(--primary-color)">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand text-white" href="/">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link text-white active" aria-current="page" href="/">Home</a>
         </li>
         {% if request.user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="/create-post/">Create Post</a>
+          <a class="nav-link text-white" href="/create-post/">Create Post</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Logout</a>
+          <a class="nav-link text-white" href="/users/user-profile/">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="/users/logout-user/">Logout</a>
         </li>
         {% else %}
         <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
+          <a class="nav-link text-white" href="/users/register-user/">Register</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link text-white" href="/users/login-user/">Login</a>
         </li>
         {% endif %}
       </ul>
